# math_parser

./: CMakeLists.txt  README.md  main.cpp
src/parser/: parser.cpp  parser.h
src/tokenizer/: Print.cpp  Print.h  Tokenizer.cpp  Tokenizer.h
src/tokens/: tokens_list.h
